# tome

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  install.sh  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: docker.yml
backend/: main.py
docs/: features.md  koreader-plugin.md  sso.md  tomesync-self-update-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: run-showcase.sh  seed_showcase.py
tests/: conftest.py  test_annotations.py  test_annotations_aggregate.py  test_api_tokens.py  test_auth.py  test_auth_hardening.py  test_bindery_api.py  test_book_chapters.py  test_book_reading_stats.py  test_book_visibility.py  test_file_ops_safety.py  test_filename_parser.py  test_goals.py  test_half_star_ratings.py  test_hardcover_sync.py  test_ko_hash.py  test_ko_stats_import.py  test_language_filter.py  test_last_admin_guard.py  test_opds_visibility.py  test_pagestat_pagination.py  test_reading_day.py  test_reading_dna.py  test_reading_log_sources.py  test_security_fixes.py  test_send_to_koreader.py  test_shelved_status.py  test_stats_dashboard.py  test_stats_insights.py  test_stats_ratings.py  test_stats_reconciliation.py  test_stats_word_count.py  test_timestamp_serialization.py  test_tomesync_catalog.py  test_tomesync_clock_offset.py  test_tomesync_hygiene.py  test_tomesync_initsession.py  test_tomesync_plugin_url.py  test_tomesync_rating_sync.py  test_tomesync_selfupdate.py  (+3 more)
website/: astro.config.mjs  package-lock.json  package.json
(+159 files in other folders)
